# Creacion-y-Lectura-de-Archivos

./: Cargo.toml  README.md  poema.txt  sobreMi.txt
src/: creacion_archivo.rs
